Update player ; Fix header image bleed in featured events on mobile

--- a/src/assets/styles/components/main/_featured-event.scss
+++ b/src/assets/styles/components/main/_featured-event.scss
@@ -20,7 +20,7 @@
 
   @media only screen and (max-width: 900px) {
     padding-top: 40px;
-    height: calc((100vw * 9 / 16) + 40px);
+    height: calc((100vw * 9 / 16) + 41px);
 
     .arrow-left,
     .arrow-right {
